--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Shoelace Component Builder</title>
 <link rel="icon" href="/favicon.png" type="image/png" />
-<link rel="stylesheet" href="/styles.css" />
+<link rel="stylesheet" href="./styles/main.css" />
 </head>
 <body x-data="builderApp()" x-init="init()">
 <header class="hero container">
@@ -17,6 +17,7 @@ Shoelace docs
 </sl-button>
 </div>
 </nav>
+ 
 <div class="hero__content">
 <h1>Design components in the browser</h1>
 <p>
