--- a/public/pages/manager-dashboard.html
+++ b/public/pages/manager-dashboard.html
@@ -4,9 +4,31 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Manager Dashboard — Design System</title>
-    <link rel="icon" href="/favicon.png">
-    <meta name="robots" content="noindex">
-    <style>body{font-family:system-ui,Segoe UI,Roboto,Helvetica,Arial,sans-serif;margin:0;padding:1rem;background:#fff} a{display:inline-block;margin:0.5rem 0;padding:0.5rem 1rem;background:#0ea5a4;color:#fff;border-radius:6px;text-decoration:none}</style>
+    <link rel="icon" href="/favicon.png" />
+    <meta name="robots" content="noindex" />
+    <style>
+      body {
+        font-family:
+          system-ui,
+          Segoe UI,
+          Roboto,
+          Helvetica,
+          Arial,
+          sans-serif;
+        margin: 0;
+        padding: 1rem;
+        background: #fff;
+      }
+      a {
+        display: inline-block;
+        margin: 0.5rem 0;
+        padding: 0.5rem 1rem;
+        background: #0ea5a4;
+        color: #fff;
+        border-radius: 6px;
+        text-decoration: none;
+      }
+    </style>
   </head>
   <body>
     <h1>Manager Dashboard</h1>
