update new structure

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
           <sl-button variant="text" href="https://shoelace.style/components" target="_blank" rel="noreferrer"> Shoelace docs </sl-button>
           <div class="topbar__actions">
             <!-- Public layout previews -->
-            <a class="layout-link" href="/layout/dashboard/dashboard.html" target="_blank" rel="noopener noreferrer">
+            <a class="layout-link" href="/layouts/dashboard/dashboard.html" target="_blank" rel="noopener noreferrer">
               <sl-button size="small" variant="default" title="Open dashboard preview">Dashboard</sl-button>
             </a>
-            <a class="layout-link" href="/layout/app/app.html" target="_blank" rel="noopener noreferrer">
+            <a class="layout-link" href="/layouts/app/app.html" target="_blank" rel="noopener noreferrer">
               <sl-button size="small" variant="default" title="Open app preview">App</sl-button>
             </a>
-            <a class="layout-link" href="/layout/admin/admin.html" target="_blank" rel="noopener noreferrer">
+            <a class="layout-link" href="/layouts/admin/admin.html" target="_blank" rel="noopener noreferrer">
               <sl-button size="small" variant="default" title="Open admin preview">Admin</sl-button>
             </a>
             <sl-button variant="text" href="https://shoelace.style/components" target="_blank" rel="noreferrer"> Shoelace docs </sl-button>
